--- a/Hippo/InternalClasses/Module/AgentProfileViewController/AgentProfileViewController.xib
+++ b/Hippo/InternalClasses/Module/AgentProfileViewController/AgentProfileViewController.xib
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController restorationIdentifier="AgentProfileViewController" id="HVh-0K-wFp" customClass="AgentProfileViewController" customModule="HippoChat" customModuleProvider="target">
+        <viewController restorationIdentifier="AgentProfileViewController" id="HVh-0K-wFp" customClass="AgentProfileViewController" customModule="Hippo" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="fgz-bi-IHk">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jeX-BK-vhF">
-                        <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                        <rect key="frame" x="0.0" y="148" width="414" height="714"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tableView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kJd-wV-j17" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="88" width="414" height="60"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="60" id="sv9-Hh-0Bd"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="jeX-BK-vhF" firstAttribute="leading" secondItem="fgz-bi-IHk" secondAttribute="leading" id="3Zr-QX-MX8"/>
                     <constraint firstItem="9H2-l7-kz4" firstAttribute="bottom" secondItem="jeX-BK-vhF" secondAttribute="bottom" id="7cZ-Qp-yDF"/>
-                    <constraint firstItem="jeX-BK-vhF" firstAttribute="top" secondItem="9H2-l7-kz4" secondAttribute="top" id="IK6-E5-oe6"/>
+                    <constraint firstItem="kJd-wV-j17" firstAttribute="trailing" secondItem="9H2-l7-kz4" secondAttribute="trailing" id="FkY-vX-E3N"/>
+                    <constraint firstItem="kJd-wV-j17" firstAttribute="leading" secondItem="9H2-l7-kz4" secondAttribute="leading" id="MLT-RO-kwV"/>
+                    <constraint firstItem="jeX-BK-vhF" firstAttribute="top" secondItem="kJd-wV-j17" secondAttribute="bottom" id="V50-aH-N8e"/>
                     <constraint firstItem="9H2-l7-kz4" firstAttribute="trailing" secondItem="jeX-BK-vhF" secondAttribute="trailing" id="dNT-QG-MOJ"/>
+                    <constraint firstItem="kJd-wV-j17" firstAttribute="top" secondItem="9H2-l7-kz4" secondAttribute="top" id="iNq-MM-fXb"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="9H2-l7-kz4"/>
             </view>
-            <navigationItem key="navigationItem" title="Profile" id="lLc-xE-tTa"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <connections>
                 <outlet property="tableView" destination="jeX-BK-vhF" id="0fx-iS-f6g"/>
+                <outlet property="view_NavigationBar" destination="kJd-wV-j17" id="pLK-kV-fWj"/>
             </connections>
-            <point key="canvasLocation" x="766" y="94"/>
+            <point key="canvasLocation" x="765.21739130434787" y="93.75"/>
         </viewController>
     </objects>
 </document>
