--- a/Hippo/UIView/CollectionViewCells/CardListCell/CardListCell.xib
+++ b/Hippo/UIView/CollectionViewCells/CardListCell/CardListCell.xib
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CardListCell" customModule="HippoChat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="151" height="185"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CardListCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="160" height="249"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="151" height="185"/>
+                <rect key="frame" x="0.0" y="0.0" width="160" height="249"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfc-30-fsV">
-                        <rect key="frame" x="5" y="5" width="141" height="175"/>
+                        <rect key="frame" x="5" y="5" width="150" height="239"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="hgc-Fb-lpH" customClass="HippoImageView" customModule="HippoChat" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="141" height="135"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="hgc-Fb-lpH" customClass="HippoImageView" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="hgc-Fb-lpH" secondAttribute="height" multiplier="1:1" id="CWZ-fn-xkk"/>
+                                    <constraint firstAttribute="height" constant="150" id="anf-Bp-cge"/>
+                                </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i21-Iq-S8M">
-                                <rect key="frame" x="0.0" y="94" width="141" height="41"/>
+                                <rect key="frame" x="0.0" y="109" width="150" height="41"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Xob-zk-TaS">
-                                        <rect key="frame" x="10" y="0.0" width="121" height="38"/>
+                                        <rect key="frame" x="10" y="0.0" width="130" height="38"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UhU-yY-yKa">
-                                                <rect key="frame" x="0.0" y="0.0" width="121" height="18"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="130" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qy9-vo-Ji8">
-                                                <rect key="frame" x="0.0" y="18" width="121" height="20"/>
+                                                <rect key="frame" x="0.0" y="18" width="130" height="20"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EFA-If-Odq">
                                                         <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -54,13 +56,13 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rgo-nZ-TkZ">
-                                                        <rect key="frame" x="20" y="0.0" width="81" height="20"/>
+                                                        <rect key="frame" x="20" y="0.0" width="90" height="20"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7tU-eP-IfO">
-                                                        <rect key="frame" x="101" y="0.0" width="20" height="20"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info_button_icon_on_navigation_bar" translatesAutoresizingMaskIntoConstraints="NO" id="7tU-eP-IfO">
+                                                        <rect key="frame" x="110" y="0.0" width="20" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="20" id="pMk-pH-SCx"/>
                                                         </constraints>
@@ -84,6 +86,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="Xob-zk-TaS" secondAttribute="bottom" constant="3" id="3yf-Gc-X5f"/>
                                     <constraint firstItem="Xob-zk-TaS" firstAttribute="top" secondItem="i21-Iq-S8M" secondAttribute="top" id="LGY-SL-w1h"/>
@@ -91,38 +94,42 @@
                                     <constraint firstAttribute="trailing" secondItem="Xob-zk-TaS" secondAttribute="trailing" constant="10" id="iKJ-zn-cZE"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mGD-z7-WZx">
-                                <rect key="frame" x="0.0" y="135" width="141" height="40"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eZJ-vR-HjE">
+                                <rect key="frame" x="0.0" y="150" width="150" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1K-Eq-cZW" customClass="HippoLabel" customModule="HippoChat" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="0.0" width="121" height="40"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mGD-z7-WZx">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1K-Eq-cZW" customClass="HippoLabel" customModule="Hippo" customModuleProvider="target">
+                                                <rect key="frame" x="10" y="0.0" width="130" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="H1K-Eq-cZW" firstAttribute="top" secondItem="mGD-z7-WZx" secondAttribute="top" id="5Gc-mt-ctO"/>
+                                            <constraint firstAttribute="bottom" secondItem="H1K-Eq-cZW" secondAttribute="bottom" id="E4s-hq-sYO"/>
+                                            <constraint firstAttribute="trailing" secondItem="H1K-Eq-cZW" secondAttribute="trailing" constant="10" id="ETf-rP-OWL"/>
+                                            <constraint firstItem="H1K-Eq-cZW" firstAttribute="leading" secondItem="mGD-z7-WZx" secondAttribute="leading" constant="10" id="d9c-7q-oVY"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="H1K-Eq-cZW" firstAttribute="top" secondItem="mGD-z7-WZx" secondAttribute="top" id="5Gc-mt-ctO"/>
-                                    <constraint firstAttribute="bottom" secondItem="H1K-Eq-cZW" secondAttribute="bottom" id="E4s-hq-sYO"/>
-                                    <constraint firstAttribute="trailing" secondItem="H1K-Eq-cZW" secondAttribute="trailing" constant="10" id="ETf-rP-OWL"/>
-                                    <constraint firstAttribute="height" constant="40" id="K5t-eS-wyC"/>
-                                    <constraint firstItem="H1K-Eq-cZW" firstAttribute="leading" secondItem="mGD-z7-WZx" secondAttribute="leading" constant="10" id="d9c-7q-oVY"/>
-                                </constraints>
-                            </view>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="mGD-z7-WZx" secondAttribute="bottom" id="4ew-VV-CGc"/>
                             <constraint firstItem="hgc-Fb-lpH" firstAttribute="top" secondItem="cfc-30-fsV" secondAttribute="top" id="AoN-4y-HzL"/>
-                            <constraint firstItem="mGD-z7-WZx" firstAttribute="leading" secondItem="cfc-30-fsV" secondAttribute="leading" id="CP4-kN-Y2l"/>
+                            <constraint firstItem="eZJ-vR-HjE" firstAttribute="trailing" secondItem="hgc-Fb-lpH" secondAttribute="trailing" id="Bkh-Fx-alh"/>
                             <constraint firstItem="i21-Iq-S8M" firstAttribute="bottom" secondItem="hgc-Fb-lpH" secondAttribute="bottom" id="Fes-3R-1fn"/>
                             <constraint firstItem="hgc-Fb-lpH" firstAttribute="leading" secondItem="cfc-30-fsV" secondAttribute="leading" id="N9K-xp-ndu"/>
-                            <constraint firstAttribute="trailing" secondItem="mGD-z7-WZx" secondAttribute="trailing" id="O84-7o-WZB"/>
                             <constraint firstItem="i21-Iq-S8M" firstAttribute="trailing" secondItem="hgc-Fb-lpH" secondAttribute="trailing" id="Oei-gM-DIE"/>
-                            <constraint firstItem="mGD-z7-WZx" firstAttribute="top" secondItem="hgc-Fb-lpH" secondAttribute="bottom" id="Piu-CP-sQs"/>
                             <constraint firstItem="i21-Iq-S8M" firstAttribute="leading" secondItem="hgc-Fb-lpH" secondAttribute="leading" id="QC2-u0-YU6"/>
+                            <constraint firstItem="eZJ-vR-HjE" firstAttribute="leading" secondItem="hgc-Fb-lpH" secondAttribute="leading" id="Zdx-sg-aJs"/>
                             <constraint firstAttribute="trailing" secondItem="hgc-Fb-lpH" secondAttribute="trailing" id="hMx-Bp-RNV"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="eZJ-vR-HjE" secondAttribute="bottom" id="mql-yL-TWj"/>
+                            <constraint firstItem="eZJ-vR-HjE" firstAttribute="top" secondItem="hgc-Fb-lpH" secondAttribute="bottom" id="q26-vB-YGn"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -135,7 +142,7 @@
                 <constraint firstItem="cfc-30-fsV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="vyi-CP-Ugm"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="151" height="185"/>
+            <size key="customSize" width="160" height="249"/>
             <connections>
                 <outlet property="bgView" destination="cfc-30-fsV" id="Hrs-Pc-FSY"/>
                 <outlet property="bottomContainer" destination="mGD-z7-WZx" id="RKL-7i-hi0"/>
@@ -148,10 +155,11 @@
                 <outlet property="ratingViewContainer" destination="EFA-If-Odq" id="X5f-UZ-u1K"/>
                 <outlet property="titleLabel" destination="UhU-yY-yKa" id="d7B-Vn-8dX"/>
             </connections>
-            <point key="canvasLocation" x="213.768115942029" y="165.06696428571428"/>
+            <point key="canvasLocation" x="220.28985507246378" y="186.49553571428569"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="info_button_icon_on_navigation_bar" width="27" height="27"/>
         <image name="placeholderImg" width="167" height="178"/>
     </resources>
 </document>
